add EnumWidgetCard with mapping option

--- a/src/metadata_v2/sample1.yaml
+++ b/src/metadata_v2/sample1.yaml
@@ -1,6 +1,6 @@
 version: 1 # change version when file is changed
-description: Sample consumer collected by the abracadabra.
-group: Abracadabra
+description: Sample_1 consumer collected by the abracadabra.
+group: Sample
 fields:
   id:
     js_type: number    
