--- a/src/metadata_v2/sample1.yaml
+++ b/src/metadata_v2/sample1.yaml
@@ -2,14 +2,14 @@ version: 1 # change version when file is changed
 description: Sample_1 consumer collected by the abracadabra.
 group: Sample
 fields:
-  id:
+  default_field:
     js_type: number    
     optional: false
     db_type: varchar
     description: 'some defaultField'
     generator:
       type: zip
-  name:
+  default_field_1:
     js_type: string    
     optional: true
     db_type: varchar
