--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@mdi/js": "^7.2.96",
-    "pinia": "^2.0.32",
+    "pinia": "^2.1.4",
     "vite-plugin-vuetify": "^1.0.2",
-    "vue": "^3.2.47",
+    "vue": "^3.3.4",
     "vue-router": "^4.1.6",
     "webfontloader": "^1.6.28",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.2",
     "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
@@ -28,8 +29,8 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "prettier": "^2.8.4",
-    "vite": "^4.1.4",
+    "vite": "^4.3.9",
     "vite-plugin-singlefile": "^0.13.3",
-    "vitest": "^0.29.1"
+    "vitest": "^0.32.4"
   }
 }
